[package]
name = "paint-plus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'HtmlLabelElement',
  'HtmlElement',
  'ImageData',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Storage',
  'Window',
]